# asic_code_ccs2026

./: .gitignore  ASIC_bootstrap.sh  Data_Labeling_Evaluate_Thresholds_best_clustering.py  Evaluate_Mapping_Conditions.py  ISV_eex_turneval_nonredinac_finalsig_turnmap.py  README.md  annotate_performance_history_signature_plot_counts.py  best_clustering_refine_uwkn.py  check_paper_outputs.py  compute_feature_variance_benign_attack.py  create_adaptation_history_graph.py  create_attackwise_history_graph.py  create_conditions_graph.py  create_threshold_graph.py  run_all_7datasets_best_clustering_refine_uwkn.sh  run_all_7datasets_data_labeling_evaluate_thresholds.sh  run_all_7datasets_evaluate_mapping_conditions.sh  run_all_7datasets_full_pipeline_ordered.sh  run_all_7datasets_isv_eex_turneval.sh  run_toy_pipeline_CICIoT2023_partial_rows.sh
paper_reproductions/: cross_paper_plot.py  cross_paper_plot_data.csv  cross_paper_plot_data.py  cross_paper_summary.py  cross_paper_summary_long.csv  cross_paper_summary_wide.csv  run_all_dataset_lost.sh
paper_reproductions/adam/: attack_metrics.py  audit_flatness.py  audit_isolation.py  data_loader.py  dataset_lost.py  main.py  op_sweep.py  pipeline.py  pyproject.toml
paper_reproductions/kitnet/: .gitignore  audit_isolation.py  data_loader.py  dataset_lost.py  evaluate.py  kitnet_runner.py  main.py  pyproject.toml
paper_reproductions/mateen/kitsune/: .gitignore  audit_isolation.py  data_loader.py  dataset_lost.py  device.py  evaluate.py  main.py  mateen_runner.py  pyproject.toml
paper_reproductions/wang/: attacks.py  data_loader.py  (+12 more)
(+16 files in other folders)
